# Hall-Management-Portal

./: .gitignore  PROJECT.md  README.md  SECURITY.md  auth_flow.md  bugs.txt  implementation_plan.md  next_updates.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4f5c961c425f_initial.py  5431c4b69dad_create_notices_table.py  5927230d097f_add_notices_and_extra_fields_to_.py  a8db691a0b26_add_setup_code_to_allowed_roll_numbers.py  cbd91f282d64_add_roll_no_to_user.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  allowed_roll.py  extras.py  menu.py  notice.py  user.py  wastage.py
backend/app/routers/: auth.py  bookings.py  dashboard.py  hall_office.py  items.py  menu.py  notices.py  staff.py  worker.py
backend/app/schemas/: auth.py  extras.py  hall_office.py  menu.py  notice.py  user.py  wastage.py
backend/app/services/: auth_service.py  email_service.py  qr_service.py  scheduler.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/change-password/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/hall-office/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/staff/: layout.tsx
frontend/src/components/: BottomNav.tsx  Header.tsx  NoticeBoard.tsx
frontend/src/lib/: api.ts  auth.tsx  utils.ts
frontend/src/types/: index.ts
(+18 files in other folders)
